spec/neg/test-failure.wv
from 'person.json'

-- row count mismatch needs to be detected
test _.output should be """
┌──────┬────────┬──────┐
│  id  │  name  │ age  │
│ long │ string │ long │
├──────┼────────┼──────┤
│    1 │ alice  │   10 │
│    2 │ bob    │   24 │
│    3 │ clark  │   40 │
├──────┴────────┴──────┤
│ 10 rows              │
└──────────────────────┘
"""
